--- a/application-dev.yml
+++ b/application-dev.yml
@@ -13,7 +13,7 @@ spring:
     proxy-target-class: true
     auto: true
   rabbitmq:
-    host: 10.42.25.2
+    host: 192.168.209.129
     port: 5672
     username: guest
     password: guest
@@ -36,8 +36,8 @@ spring:
         exclusions: '*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*'
       stat-view-servlet:
         allow:
-        login-username: root
-        login-password: root
+        login-username: admin
+        login-password: admin
   mail:
     host: smtp.163.com
     username: paascloudTest@163.com
