--- a/application-dev.yml
+++ b/application-dev.yml
@@ -15,8 +15,8 @@ spring:
   rabbitmq:
     host: 192.168.209.129
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: 123456
   redis:
     host: paascloud-db-redis
     password: paascloud@redis
