--- a/paascloud-zipkin-dev.yml
+++ b/paascloud-zipkin-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://paascloud-db-mysql:3306/paascloud_zipkin?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/paascloud_zipkin?characterEncoding=utf8&useSSL=false
     schema: classpath:/mysql.sql
   sleuth:
     enabled: false
@@ -12,9 +12,9 @@ spring:
 zipkin:
   collector:
     rabbitmq:
-      addresses: paascloud-mq-rabbit:5672
-      username: guest
-      password: guest
+      addresses: 192.168.209.129:5672
+      username: admin
+      password: 123456
       queue: zipkin
   storage:
     type: mysql
